# app/Http/Controllers/Controller.php
@@ -11,15 +11,8 @@ use Illuminate\Routing\Controller as BaseController;
  *    title="Genshin API",
  *    version="1.0.0",
  * ),
- *    @OA\SecurityScheme(
- *       securityScheme="bearerAuth",
- *       in="header",
- *       name="bearerAuth",
- *       type="http",
- *       scheme="bearer",
- *       bearerFormat="JWT",
- *    ),
- *    @OA\Servers(
+ *    
+ *    @OA\Server(
  *       url="http://localhost:8000/api/",
  *       description="Serveur de développement",
  *    ),
